<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gymaholic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GYMAHOLIC</string>
    <string name="nav_header_subtitle">noreply.dextor@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Privacy Policy</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">List of Contents</string>
    <string name="diet">\nHere is a basic overview of the nutrients your body needs and what they do:\n
1) Proteins- The chemical building blocks from which our cells, organs, and
tissues are made.\n
2) Carbohydrates- Your basic energy source that is composed of simple and
complex carbohydrates.\n
3) Fats- These cells are your energy storage units.\n
4) Water- Essential for a number of vital bodily functions and accounts for
approximately 72% of your muscle tissue while transporting all of your
nutrients, increasing your blood volume, and eliminating waste.\n
5) Vitamins- These complex chemicals are required for bodily operations, are
produced naturally by the body, and are referred to as “organic compounds.\n
6) Minerals- Not produced in nature and of referred to as inorganic.\n
        ---------------------------------------------------------------------------------------------\n
        Here is a more detailed description of the nutrients…\n
Proteins :\n
Q: Why Does The Body Need Protein?\n
A: Protein is a nutrient made up of amino acids. There are two types of amino acids.
Non-essential Amino Acids that can usually be synthesized by a healthy body from the
daily foods that we eat. Then there are Essential Amino Acids that must be obtained
through the daily diet.\n
Protein has a number of important roles in the body, including:\n
1.Repairing of body cells\n
2.Building and repairing muscles and bones\n
3.Providing a source of energy\n
4.Regulating many important metabolic processes in the body\n
        ---------------------------------------------------------------------------------------------\n
Carbohydrates:\n
Q: Why does the body need carbohydrates?\n
A: The main reason your body needs carbohydrates is to provide energy. Carbohydrates
consist of starches (complex carbs) and sugars (simple carbs) that are broken down into
glucose, which then turns into energy.\n
        ---------------------------------------------------------------------------------------------\n
Fats:\n
Q: I am trying to lose fat; do I need to incorporate fats into my diet?\n
A: Yes, fats are an important part of your body. They provide insulation and reserved
energy when you need it. Fat has also been found to raise energy levels and contributes to
your strength gains. When you short term energy supplies burn up (which can take 20-45
minutes), your fat cells are then used as the primary energy source.\n
owever, eating too much dietary fat may lead to the following health problems:\n
1.Obesity\n
2.Heart disease\n
3.Stroke\n
4.Hypertension\n
5.So you probably want to know which fats are the good fats and which fats are bad fats.\n
6.There are really three basic types of fat that include saturated fats, unsaturated fats, and
polysaturated fats.\n
        ---------------------------------------------------------------------------------------------\n

Saturated fats:\n
This kind of fat is like Crisco, its bad for you. It solidifies at room temperature and can
lead to a number of health problems. Saturated fats really have no role in our body. Foods
that contain the most saturated fat include:\n
1) High fat beef\n
2) Butter\n
3) Cheese\n
4) Chocolate\n
You are better off trying to avoid these foods.\n
        ---------------------------------------------------------------------------------------------\n
Unsaturated fats:\n
These fats are better for you than saturated fats and are usually still liquid at room
temperature. Your body cannot manufacture these fats on its own but they still need to be
incorporated into your diet. They are found in olive oil, fish oil, and cold-water fish. Two
important unsaturated fats are polyunsaturated fats and Monosaturated fats.\n
        ---------------------------------------------------------------------------------------------\n
Water:\n
Q: How much water should I be drinking everyday?\n
A: At least 2 glasses with each meal\n
If you want to look your best, water needs to be an essential part of your diet. It is
responsible for the transportation of vital nutrients and cleaning toxins from your blood.
Your body is made up of 40%-60% water. From constant perspiration and daily activity it is very easy to become dehydrated. Many of us never even know that we are close to
dehydration. When your throat becomes dry, your body is already dehydrated.\n
        ---------------------------------------------------------------------------------------------\n
Nutrition Overview:\n
1. Fat loss and weight loss are dramatically accelerated when you “clean up” your
diet.\n
2.Proteins are the essential building blocks of muscle. Everyone needs protein in his
or her diet so that muscle is built and not lost.\n
3.Carbohydrates provide energy.\n
4.Saturated fats are unhealthy, whereas unsaturated, polysaturated, and
monosaturated fats are needed to burn off these saturated.\n
5.Drink water to help your body easily transport vital nutrients and to prevent the
possible effects of overtraining.\n
6.Vitamins and minerals help repair bodily tissue and promote the overall wellness
of the body.\n
        \nxxxxx-source bodybuilding.com-xxxxx

    </string>
    <string name="NXT">NEXT</string>
    <string name="page3">Protein powder is a popular nutritional supplement. Protein is an essential macronutrient that helps build muscle, repair tissue, and make enzymes and hormones. Using protein powder may also aid weight loss and help people tone their muscles.
    \n1.Weight management
    \n2.Muscle growth
    \n3.Recovery after exercise
    \n4.Added nutrition</string>
    <string name="page7">Milk allergy: If you are allergic to cows milk, avoid using whey protein.\n
        \nWhey protein is the protein contained in whey, the watery portion of milk that separates from the curds when making cheese.Whey protein is commonly used for improving athletic performance and increasing strength, but evidence to support these uses is mixed. Whey protein is also used to reverse weight loss in people with HIV and to help prevent allergic conditions in infants.\n
    \nWhey protein is LIKELY SAFE for most children and adults when taken by mouth appropriately. High doses can cause some side effects such as increased bowel movements, nausea, thirst, bloating, cramps, reduced appetite, tiredness (fatigue), and headache.

    </string>
    <string name="page10">When you are working out hard, you want to see results fast. While supplements such as whey protein and creatine have been proven to help improve strength, muscle growth and recovery, the amount of time it takes to work depends on a number of factors, including your workout routine, age and fitness level. Talk to your doctor before making changes to your exercise routine or adding supplements, such as whey and creatine, to your diet regimen.</string>
    <string name="tf">Tamil Fitness</string>
    <string name="page12">Remember the two most important points:\n

    1.When training for strength, choose exercises that allow you to lift the most weight and require the most skill.\n
    2. When training for size, choose exercises that allow you to lift the most weight and offer the most isolation on the target area.\n
        \nThe other big point, which I hope you will remember and incorporate, is that you shouldn\'t focus exclusively on size until you have achieved at least "decent" strength in the major exercises.\n
        \nFinally, I will offer the standard reminder that none of these exercises will work for any goal if you dont manage the other elements of your training program volume, intensity, frequency as well as what you do outside the gym. Without proper food and supplements, good sleep habits, and sensible recovery between workouts, it doesn\'t matter which exercises you choose.
        That said, if you get everything else right, or mostly right, then matching your exercise selection to your goals could be the final piece of the puzzle.
</string>
    <string name="page13">Meal Plan for Bulking and Maintaining:
    \n----4 Meals----
\n1.Breakfast
    \n2.Lunch
    \n3.Snack
    \n4.Dinner</string>
    <string name="p13">2000 Calories Food Plan</string>
    <string name="set_alarm">Set alarm</string>
    <string name="set_the_alarm_clock">Set the alarm clock!</string>
    <string name="unset_alarm">Unset alarm</string>
    <string name="videos_and_tips">Videos and Tips</string>
    <string name="developer_connect">Developer Connect</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="motivational_quotes">Motivational Quotes</string>
    <string name="alarm">ALARM</string>
    <string name="nutrition">NUTRITION</string>
    <string name="no_change_after_taking_protein_powder">No Change after Taking Protein Powder?</string>
    <string name="_5_exercises_for_size_and_strenght">5 Exercises For Size and Strength</string>
    <string name="facts_of_protein_powder">Facts of Protein Powder</string>
    <string name="side_effects_of_supplements">Side Effects Of supplements</string>
</resources>