<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_diet"
            android:icon="@drawable/ic_accessibility_black_24dp"
            android:title="@string/nutrition" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_videocam_black_24dp"
            android:title="@string/videos_and_tips" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_access_alarm_black_24dp"
            android:title="@string/alarm" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_fitness_center_black_24dp"
            android:title="@string/motivational_quotes" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/wapp"
                android:title="@string/developer_connect" />
        </menu>
    </item>
    <group>
        <item
            android:id="@+id/fb"
            android:icon="@drawable/fb"
            android:title="@string/tf" />
        <item
            android:id="@+id/insta"
            android:icon="@drawable/ins"
            android:title="@string/tf" />
    </group>

</menu>
